--- a/src/sass/blocks/_section-product.sass
+++ b/src/sass/blocks/_section-product.sass
@@ -47,6 +47,12 @@
   justify-content: space-between
   align-items: flex-start
   margin-top: 26px
+  &__wrap
+    display: flex
+    justify-content: space-between
+    align-items: center
+    width: 100%
+
   &__item
     display: flex
     flex-direction: column
@@ -76,11 +82,6 @@
     & button
       padding: 11px 17px
       cursor: pointer
-.block
-  display: flex
-  justify-content: space-between
-  align-items: center
-  width: 100%
 
 .item
   position: relative
